updated on 2nd Aug

--- a/jainDataBase/gatha/01_द्रव्यानुयोग/06_द्रव्यसंग्रह--नेमिचंद्र-सिद्धांतचक्रवर्ती/html/index.html
+++ b/jainDataBase/gatha/01_द्रव्यानुयोग/06_द्रव्यसंग्रह--नेमिचंद्र-सिद्धांतचक्रवर्ती/html/index.html
@@ -61,7 +61,7 @@
 <div align=right><b><font size=20>- नेमिचंद्र-सिद्धांतचक्रवर्ती</font></b></div>
 <br><br><br><font size=2 color=darkRed>
 <div align=right>nikkyjain@gmail.com</div>
-<div align=right>Date : 18-Jul-2023</font></div>   <div class=adhikaar id=home><h1>Index</h1></div><br>
+<div align=right>Date : 02-Aug-2023</font></div>   <div class=adhikaar id=home><h1>Index</h1></div><br>
   <div class=main>अधिकार</div><br>
     <table align=center width=90% class=adhikarIndex>
       <td><a href='#ad1'>﻿मंगलाचरण</a>
@@ -329,7 +329,7 @@
 <div class=gadya>अर्थग्राहक निर्विकल्पक और है अविशेष जो ।<br>सामान्य अवलोकन करे जो उसे दर्शन जानना ॥४३॥</div>
 <div class=paragraph><b><font color=darkmagenta>अन्वयार्थ : </font></b>﻿<b><font color=darkRed>[अट्ठे]</font></b> पदार्थों के विषय में <b><font color=darkRed>[आयारं]</font></b> आकार/विकल्प/भेद को <b><font color=darkRed>[णेव कट्टुं]</font></b> न करके <b><font color=darkRed>[जं]</font></b> जो <b><font color=darkRed>[अविसेसिदूण]</font></b> काला-नीला, छोटा-बड़ा, घट-पट आदि विशेषताओं से रहित <b><font color=darkRed>[भावाणं]</font></b> पदार्थों का <b><font color=darkRed>[सामण्णं]</font></b> सामान्य <b><font color=darkRed>[गहणं]</font></b> ग्रहण करना <b><font color=darkRed>[समए]</font></b> शास्त्र में <b><font color=darkRed>[दंसणं]</font></b> दर्शन <b><font color=darkRed>[इदि]</font></b> इस प्रकार <b><font color=darkRed>[भण्णए]</font></b> कहा गया है ।</div><hr class=type_7>
 <a href='#home' class=index>&#x1f3e0;</a>
-<br><div class=title id=gatha-44><span class=incFontSz>+ </span><a href=#index>﻿दर्शन और ज्ञान का क्रम</a><span class=decFontSz> -</span></div><div class=gatha>﻿दंसणपुव्वं णाणं, छदुमत्थाणं ण दुण्णि उवओगा<br>जुगवं जम्हा केवलि-णाहे जुगवं तु ते दो वि ॥44॥</div>
+<br><div class=title id=gatha-44><span class=incFontSz>+ </span><a href=#index>﻿दर्शन और ज्ञान का क्रम</a><span class=decFontSz> -</span></div><div class=gatha>﻿दंसणपुव्वं णाणं, छदमत्थाणं ण दोण्णि उवउग्गा<br>जुगवं जम्हा केवलि-णाहे जुगवं तु ते दो वि ॥44॥<br></div>
 <div class=gadya>जिनवर कहें छद्मस्थ के हो ज्ञान दर्शनपूर्वक ।<br>पर केवली के साथ हो दोनों सदा यह जानिये ॥४४॥</div>
 <div class=paragraph><b><font color=darkmagenta>अन्वयार्थ : </font></b>﻿<b><font color=darkRed>[छदमत्थाणं]</font></b> छद्मस्थ जीवों के <b><font color=darkRed>[दंसणपुव्वं णाणं]</font></b> दर्शनपूर्वक ज्ञान होता है <b><font color=darkRed>[जम्हा]</font></b> क्योंकि छद्मस्थों के <b><font color=darkRed>[दुण्णि]</font></b> दोनों <b><font color=darkRed>[उवओगा]</font></b> उपयोग <b><font color=darkRed>[जुगवं]</font></b> एक साथ <b><font color=darkRed>[ण]</font></b> नहीं होते हैं <b><font color=darkRed>[तु]</font></b> किन्तु <b><font color=darkRed>[केवलिणाहे]</font></b> केवलीभगवान् में <b><font color=darkRed>[ते दो वि]</font></b> वे दोनों ही उपयोग <b><font color=darkRed>[जुगवं]</font></b> एक साथ होते हैं । </div><hr class=type_7>
 <a href='#home' class=index>&#x1f3e0;</a>
