Updated on 7th Sep

--- a/jainDataBase/bhajans/02_शास्त्र/html/अमृतझर-झुरि-झुरि-आवे.html
+++ b/jainDataBase/bhajans/02_शास्त्र/html/अमृतझर-झुरि-झुरि-आवे.html
@@ -3972,5 +3972,15 @@ $(document).on( "pagecontainershow", function(){
             No Karaoke Found
         </audio></div>
 <br>    <div class=pooja>
-../../21_पं-बुध-महाचन्द्र/main/अमृतझर-झुरि-झुरि-आवे.txt<br><br>
-  </div></div></body></html>
+<!--         ../../21_पं-बुध-महाचन्द्र/main/अमृतझर-झुरि-झुरि-आवे.txt  -->
+
+	        <script type="text/javascript">
+        windows.onload="https://nikkyjain.github.io/jainDataBase/bhajans/21_पं-बुध-महाचन्द्र/html/अमृतझर-झुरि-झुरि-आवे.html";
+        </script>
+	
+
+<br><br>
+  </div></div>
+  
+  
+  </body></html>
