--- a/jainDataBase/bhajans/01_देव/html/ध्यान-धर-ले-प्रभू-को.html
+++ b/jainDataBase/bhajans/01_देव/html/ध्यान-धर-ले-प्रभू-को.html
@@ -3971,6 +3971,21 @@ $(document).on( "pagecontainershow", function(){
             <source src='https://nikkyjain.github.io/bhajans/01_देव/karaoke/ध्यान-धर-ले-प्रभू-को.mp3'  type="audio/mpeg">
             No Karaoke Found
         </audio></div>
-<br>    <div class=pooja>
-../../12_पं-सौभाग्यमल-कृत/main/ध्यान-धर-ले-प्रभू-को.txt<br><br>
+<br>    
+	<div class=pooja>
+	<!--../../12_पं-सौभाग्यमल-कृत/html/ध्यान-धर-ले-प्रभू-को.html<br><br> -->
+	
+	      <iframe
+                   src="../../../../others/collaborate/bhajans/12_पं-सौभाग्यमल-कृत/main/ध्यान-धर-ले-प्रभू-को.txt"
+                   name="targetframe"
+                   allowTransparency="true"
+                   scrolling="yes"
+                   frameborder="0"
+                   width: 100%
+                     height: 100%
+               >
+               </iframe>
+	
+	
+	
   </div></div></body></html>
