updated trial jain bhajan

--- a/jainDataBase/bhajans/01_देव/html/ध्यान-धर-ले-प्रभू-को.html
+++ b/jainDataBase/bhajans/01_देव/html/ध्यान-धर-ले-प्रभू-को.html
@@ -3972,10 +3972,10 @@ $(document).on( "pagecontainershow", function(){
             No Karaoke Found
         </audio></div>
 <br>    
-	<div class=pooja>
+	<div class=pooja align=center>
 	<!--../../12_पं-सौभाग्यमल-कृत/html/ध्यान-धर-ले-प्रभू-को.html<br><br> -->
 	
-	      <iframe
+	      <!--iframe
                    src="../../../../others/collaborate/bhajans/12_पं-सौभाग्यमल-कृत/main/ध्यान-धर-ले-प्रभू-को.txt"
                    name="targetframe"
                    allowTransparency="true"
@@ -3984,7 +3984,9 @@ $(document).on( "pagecontainershow", function(){
                    width: 100%
                      height: 100%
                >
-               </iframe>
+               </iframe-->
+               
+                     <iframe id="myFrame" src="../../../../others/collaborate/bhajans/12_पं-सौभाग्यमल-कृत/main/ध्यान-धर-ले-प्रभू-को.txt" style="color:#ff4000;font-weight:bold;font-size:4vw;height:500px;width:500px;border:none"></iframe>
 	
 	
 	
