--- a/jainDataBase/bhajans/25_चौबीस-तीर्थंकर/html/आदिनाथ--आज-गिरिराज-के.html
+++ b/jainDataBase/bhajans/25_चौबीस-तीर्थंकर/html/आदिनाथ--आज-गिरिराज-के.html
@@ -3971,6 +3971,7 @@ $(document).on( "pagecontainershow", function(){
             <source src='https://nikkyjain.github.io/bhajans/25_चौबीस-तीर्थंकर/karaoke/आदिनाथ--आज-गिरिराज-के.mp3'  type="audio/mpeg">
             No Karaoke Found
         </audio></div>
-<br>    <div class=pooja>
-../../13_पं-भूधरदास-कृत/main/आदिनाथ--आज-गिरिराज-के.txt<br><br>
+<span class=tarj>राग : पंचम</span>
+    <div class=pooja>
+</br>आज गिरिराज के शिखर सुन्दर सखी</br>होत है अतुल कौतुक महा मनहरन ॥</br>नाभि के नंद को, जगत के चंद को,</br>लेगये इंद्र मिलि, जन्ममंगल करन ॥टेक॥</br></br>हाथ-हाथन धरे, सुरन-कंचन घरे,</br>छीरसागर भरे, नीर निरमल बरन ।</br>सहस अरु आठ गिन, एकही बार जिन,</br>सीस सुर ईशके, करन लागे ढरन ॥१॥</br></br>नचत गीत सुरसुंदरी, रहस रससों भरी,</br>गीत गावैं अरी, देहि ताली करन ।</br>देव-दुंदुभि बजैं, वीन वंशी सजैं,</br>एकसी परत, आनंदघन की भरन ॥२॥</br></br>इंद्र हर्षित हिये, नेत्र अंजुलि किए,</br>तृपति होत न पिये, रूप अमृत झरन ।</br>दास 'भूधर' भनै, सुदिन देखे बनै,</br>कहि थके लोक लख, जीभ न सके वरन ॥३॥<br><br>
   </div></div></body></html>
