--- a/jainDataBase/bhajans/25_चौबीस-तीर्थंकर/html/आदिनाथ--ऋषभदेव-जनम्यौ.html
+++ b/jainDataBase/bhajans/25_चौबीस-तीर्थंकर/html/आदिनाथ--ऋषभदेव-जनम्यौ.html
@@ -3971,6 +3971,7 @@ $(document).on( "pagecontainershow", function(){
             <source src='https://nikkyjain.github.io/bhajans/25_चौबीस-तीर्थंकर/karaoke/आदिनाथ--ऋषभदेव-जनम्यौ.mp3'  type="audio/mpeg">
             No Karaoke Found
         </audio></div>
-<br>    <div class=pooja>
-../../11_पं-द्यानतराय-कृत/main/आदिनाथ--ऋषभदेव-जनम्यौ.txt<br><br>
+<span class=tarj>राग : विलावल</span>
+    <div class=pooja>
+</br>ऋषभदेव जनम्यौ धन घरी ।</br>इन्द्र नचें गंधर्व बजावैं, किन्नर बहु रस भरी ॥टेक॥</br></br>पट आभूषन पुहुपमालसों, सहसबाहु सुरतरु ह्वै हरी ।</br>दश अवतार स्वांग विधि पूरन, नाच्यो शक्र भगति उर धरी ॥</br>ऋषभदेव जनम्यौ धन घरी ॥1॥</br></br>हाथ हजार सबनिपै अपछर, उछरत नभमैं चहुँदिशि फरी ।</br>करी करन अपछरी उछारत, ते सब नटैं गगन में खरी ॥</br>ऋषभदेव जनम्यौ धन घरी ॥२॥</br></br>प्रगट गुपत भूपर अंबरमें, नाचैं सबै अमर अमरी ।</br>'द्यानत' घर चैत्यालय कीनौं, नाभिरायजी हो लहरी ॥</br>ऋषभदेव जनम्यौ धन घरी ॥3॥<br><br>
   </div></div></body></html>
