--- a/jainDataBase/bhajans/25_चौबीस-तीर्थंकर/html/पारसनाथ--मंगल-थाल-सजाकर.html
+++ b/jainDataBase/bhajans/25_चौबीस-तीर्थंकर/html/पारसनाथ--मंगल-थाल-सजाकर.html
@@ -3972,5 +3972,5 @@ $(document).on( "pagecontainershow", function(){
             No Karaoke Found
         </audio></div>
 <br>    <div class=pooja>
-../../01_देव/main/पारसनाथ--मंगल-थाल-सजाकर.txt<br><br>
+मंगल थाल सजाकर, मंगल दीप जलाकर</br>पारस प्रभु की बोल जय-जय, मंगल वाद्य बजाकर ॥टेक॥</br></br>मन की कलियाँ निकस गई हैं, पारस प्रभु के दर्शन से ।</br>मनता पूर्ण हुई है मेरी, चिंतामणि पद वंदन से ॥</br>मंगल थाल सजाकर, मंगल दीप जलाकर</br>पारस प्रभु की बोल जय-जय, मंगल वाद्य बजाकर ॥१॥</br> </br>आज जगा सौभाग्य हमारा, जिनमंदिर में आकर ।</br>सुंदर मूरति तरु तट सोहे, छत्र-त्रय फैराने से ।</br>सुमन, सुवृष्टि करे देवगण, मंगल वाद्य बजाकर ॥</br>मंगल थाल सजाकर, मंगल दीप जलाकर</br>पारस प्रभु की बोल जय-जय, मंगल वाद्य बजाकर ॥२॥</br></br>चौसठ चँवर ढुरावे सुरगण, मधुर गुण गाने से ।</br>मनहर नृत्य करे किन्नरियां, नूपुरों की झंकारों से</br>बीन मंजीरा शंख झल्लरी, सुर टाई ताल बजाकर ॥</br>मंगल थाल सजाकर, मंगल दीप जलाकर</br>पारस प्रभु की बोल जय-जय, मंगल वाद्य बजाकर ॥३॥<br><br>
   </div></div></body></html>
