--- a/jainDataBase/bhajans/25_चौबीस-तीर्थंकर/html/पारसनाथ--मेरे-प्रभु-का-पारस.html
+++ b/jainDataBase/bhajans/25_चौबीस-तीर्थंकर/html/पारसनाथ--मेरे-प्रभु-का-पारस.html
@@ -3972,5 +3972,5 @@ $(document).on( "pagecontainershow", function(){
             No Karaoke Found
         </audio></div>
 <br>    <div class=pooja>
-../../01_देव/main/पारसनाथ--मेरे-प्रभु-का-पारस.txt<br><br>
+﻿पारस नाम पारस नाम,</br>मेरे प्रभु का पारस नाम ।</br>है सुखधाम प्रभु का नाम,</br>मेरे प्रभु का पारस नाम ॥टेक॥</br></br>है सुखकारी पर हितकारी,</br>जन हितकारी महिमा भारी ।</br>निशदिन जपते तेरा नाम ।</br>मेरे प्रभु का पारस नाम ॥१॥</br></br>पाप मर्दन कर्म निकंदन,</br>भव तम भंजन जन मन रंजन ।</br>भक्तजनों के तुम अभिराम ।</br>मेरे प्रभु का पारस नाम ॥२॥</br></br>कर्म खपाए, नाग बचाए</br>इंद्र लोक में उन्हे पठाए</br>प्रभु ने पाया केवलज्ञान ।</br>मेरे प्रभु का पारस नाम ॥३॥</br></br>दे उपदेश भविक जन तारे ।</br>सिद्धालय में आप विराजे ।</br>हम भी पहुँचे शिवपुर धाम ।</br>मेरे प्रभु का पारस नाम ॥३॥<br><br>
   </div></div></body></html>
