--- a/jainDataBase/bhajans/25_चौबीस-तीर्थंकर/html/महावीर--पंखिडा-रे-उड-के-आओ.html
+++ b/jainDataBase/bhajans/25_चौबीस-तीर्थंकर/html/महावीर--पंखिडा-रे-उड-के-आओ.html
@@ -3972,5 +3972,5 @@ $(document).on( "pagecontainershow", function(){
             No Karaoke Found
         </audio></div>
 <br>    <div class=pooja>
-../../06_कल्याणक/main/महावीर--पंखिडा-रे-उड-के-आओ.txt<br><br>
+﻿पंखिडा ओ .... पंखिडा... </br></br>पंखिडा रे उड के आओ कुंडलपुर में,</br>तीर्थंकर जन्मे आज भरतक्षेत्र में॥पंखिडा..</br></br>माता त्रिशला ने देखे थे सोलह सपने,</br>उनका फ़ल बताया सिद्धार्थराज ने,</br>तेजवान बुद्धिमान लाल होएगा,</br>ज्ञानवान तीर्थंकर बाल होएगा॥पंखिडा..</br></br>सिद्धार्थराज के द्वार बजती बधाई है,</br>प्रथम दर्शन को शची इंद्राणी आई है,</br>इंद्र इंद्राणी आये आज नगर में,</br>खुशियां अपार छाई नगर नगर में॥पंखिडा..</br></br>प्रभु आये यहां अच्युत विमान से,</br>यह बालक शोभित सम्यक्त्व रिद्धि से,</br>मतिज्ञान श्रुतज्ञान अवधिज्ञान है,</br>सम्यक्दर्शन ज्ञान रत्न भी महान है॥पंखिडा..</br></br>प्रभु पूरी करेंगे यहां आत्मसाधना,</br>अब धारण करेंगे कभी पुनर्जन्म ना,</br>वीतराग से जिनराज बनेंगे,</br>चिदानंद चैतन्यराज वरेंगे॥पंखिडा..</br></br><br><br>
   </div></div></body></html>
