--- a/jainDataBase/teeka/01_द्रव्यानुयोग/17_परम-अध्यात्म-तरंगिणी--अमृतचंद्राचार्य/html/index.html
+++ b/jainDataBase/teeka/01_द्रव्यानुयोग/17_परम-अध्यात्म-तरंगिणी--अमृतचंद्राचार्य/html/index.html
@@ -46,7 +46,7 @@
     }
   </style>
 </head>
-<body oncopy="return false" onpaste="return false" oncut="return false">
+<body>
 <div align=center><a href='../../../../../index.html'><img src='../../../../../images/jain-saint.jpg' height=270 width=300></img><figcaption>Click Here</figcaption></a></div>
 <br><br><br>
 <div class=hdr1 align=center>परम-अध्यात्म-तरंगिणी</div>
@@ -61,7 +61,7 @@
 <div align=right><b><font size=20>- अमृतचंद्राचार्य</font></b></div>
 <br><br><br><font size=2 color=darkRed>
 <div align=right>nikkyjain@gmail.com</div>
-<div align=right>Date : 17-Nov-2022</font></div><br><br><div class=adhikaar id=index><h1>Index</h1></div><br>
+<div align=right>Date : 19-Nov-2023</font></div><br><br><div class=adhikaar id=index><h1>Index</h1></div><br>
 <div align=center><img src='../../../../../images/brownOm.png' width='5%'></img></div>
     <table align=center width=90% class=mainIndex>
 <tr><th>गाथा / सूत्र<th>विषय</tr>
@@ -310,7 +310,7 @@
 <div class=gatha>﻿<span class=comment>(उपजाति)</span><br>एकस्य भावो न तथा परस्य<br>चिति द्वयोर्द्वाविति पक्षपातौ ।<br>यस्तत्त्ववेदी च्युतपक्षपात-<br>स्तस्यास्ति नित्यं खलु चिच्चिदेव ॥80॥</div>
 <div class=paragraph><b><font color=darkmagenta>अन्वयार्थ : </font></b>﻿<b><font color=darkRed>[भावः]</font></b> जीव भाव है <span class=comment>(अर्थात् भावरूप है)</span> <b><font color=darkRed>[एकस्य]</font></b> ऐसा एक नय का पक्ष है और <b><font color=darkRed>[न तथा]</font></b> जीव भाव नहीं है <b><font color=darkRed>[परस्य]</font></b> ऐसा दूसरे नय का पक्ष है; <b><font color=darkRed>[इति]</font></b> इसप्रकार <b><font color=darkRed>[चिति]</font></b> चित्स्वरूप जीव के सम्बन्ध में <b><font color=darkRed>[द्वयोः]</font></b> दो नयों के <b><font color=darkRed>[द्वौ पक्षपातौ]</font></b> दो पक्षपात हैं । <b><font color=darkRed>[यः तत्त्ववेदी च्युतपक्षपातः]</font></b> जो तत्त्ववेत्ता पक्षपातरहित है <b><font color=darkRed>[तस्य]</font></b> उसे <b><font color=darkRed>[नित्यं]</font></b> निरन्तर <b><font color=darkRed>[चित्]</font></b> चित्स्वरूप जीव <b><font color=darkRed>[खलु चित् एव अस्ति]</font></b> चित्स्वरूप ही है ।</div><hr class=type_7>
 <a href='#home' class=index>&#x1f3e0;</a>
-<div class=gatha>﻿कन्दर्पं कौत्कुच्यं मौखर्यमतिप्रसाधनं पञ्च<br>असमीक्ष्य चाधिकरणं व्यतीतयोऽनर्थदण्डकृद्विरतेः ॥81॥</div>
+<div class=gatha>एकस्य चैको न तथा परस्य<br>चिति द्वयोर्द्वाविति पक्षपातौ ।<br>यस्तत्त्ववेदी च्युतपक्षपात-<br>स्तस्यास्ति नित्यं खलु चिच्चिदेव ॥81॥<br></div>
 <div class=paragraph><b><font color=darkmagenta>अन्वयार्थ : </font></b>﻿<b><font color=darkRed>[एकः]</font></b> जीव एक है <b><font color=darkRed>[एकस्य]</font></b> ऐसा एक नय का पक्ष है और <b><font color=darkRed>[न तथा]</font></b> जीव एक नहीं है <b><font color=darkRed>[परस्य]</font></b> ऐसा दूसरे नय का पक्ष है; <b><font color=darkRed>[इति]</font></b> इसप्रकार <b><font color=darkRed>[चिति]</font></b> चित्स्वरूप जीव के सम्बन्ध में <b><font color=darkRed>[द्वयोः]</font></b> दो नयों के <b><font color=darkRed>[द्वौ पक्षपातौ]</font></b> दो पक्षपात हैं । <b><font color=darkRed>[यः तत्त्ववेदी च्युतपक्षपातः]</font></b> जो तत्त्ववेत्ता पक्षपातरहित है <b><font color=darkRed>[तस्य]</font></b> उसे <b><font color=darkRed>[नित्यं]</font></b> निरन्तर <b><font color=darkRed>[चित्]</font></b> चित्स्वरूप जीव <b><font color=darkRed>[खलु चित् एव अस्ति]</font></b> चित्स्वरूप ही है ।</div><hr class=type_7>
 <a href='#home' class=index>&#x1f3e0;</a>
 <div class=gatha>﻿<span class=comment>(उपजाति)</span><br>एकस्य सान्तो न तथा परस्य<br>चिति द्वयोर्द्वाविति पक्षपातौ ।<br>यस्तत्त्ववेदी च्युतपक्षपात-<br>स्तस्यास्ति नित्यं खलु चिच्चिदेव ॥82॥</div>
