updated Pravachansar gatha 231,233

--- a/jainDataBase/gatha/01_द्रव्यानुयोग/02_प्रवचनसार--कुन्दकुन्दाचार्य/html/index.html
+++ b/jainDataBase/gatha/01_द्रव्यानुयोग/02_प्रवचनसार--कुन्दकुन्दाचार्य/html/index.html
@@ -46,7 +46,7 @@
     }
   </style>
 </head>
-<body oncopy="return false" onpaste="return false" oncut="return false">
+<body>
 <div align=center><a href='../../../../../index.html'><img src='../../../../../images/jain-saint.jpg' height=270 width=300></img><figcaption>Click Here</figcaption></a></div>
 <br><br><br>
 <div class=hdr1 align=center>प्रवचनसार</div>
@@ -61,7 +61,7 @@
 <div align=right><b><font size=20>- कुन्दकुन्दाचार्य</font></b></div>
 <br><br><br><font size=2 color=darkRed>
 <div align=right>nikkyjain@gmail.com</div>
-<div align=right>Date : 17-Nov-2022</font></div>   <div class=adhikaar id=home><h1>Index</h1></div><br>
+<div align=right>Date : 16-Jan-2024</font></div>   <div class=adhikaar id=home><h1>Index</h1></div><br>
   <div class=main>अधिकार</div><br>
     <table align=center width=90% class=adhikarIndex>
       <td><a href='#ad1'>﻿ज्ञानतत्त्व-प्रज्ञापन-अधिकार</a>
@@ -1304,9 +1304,10 @@
 <a href='#home' class=index>&#x1f3e0;</a>
 <br><div class=title id=gatha-231><span class=incFontSz>+ </span><a href=#index>﻿अब अन्तरंग-बहिरंग हिंसारूप से दो प्रकार के छेद को प्रसिद्ध करते हैं </a><span class=decFontSz> -</span></div><div class=gatha>﻿मरदु व जियदु व जीवो अयदाचारस्स णिच्छिदा हिंसा । <span class=comment>(217)</span><br>पयदस्स णत्थि बंधो हिंसामेत्तेण समिदस्स ॥231॥</div>
 <div class=gadya>﻿प्राणी मरें या ना मरें हिंसा अयत्नाचार से ।<br>तब बंध होता है नहीं जब रहें यत्नाचार से ॥२१७॥</div>
-<div class=paragraph><b><font color=darkmagenta>अन्वयार्थ : </font></b>﻿<b><font color=darkRed>[जीव:]</font></b> जीव <b><font color=darkRed>[म्रियतां वा जीवतु वा]</font></b> मरे या जिये, <b><font color=darkRed>[अयताचारस्य]</font></b> आयत्नाचारी <span class=comment>(अप्रयत आचार वाले)</span> के <b><font color=darkRed>[हिंसा]</font></b> <span class=comment>(अंतरंग)</span> हिंसा <b><font color=darkRed>[निश्‍चिता]</font></b> निश्‍चित है; <b><font color=darkRed>[प्रयतस्य समितस्य]</font></b> प्रयत के, समितिवान् के <b><font color=darkRed>[हिंसामात्रेण]</font></b> <span class=comment>(बहिरंग)</span> हिंसामात्र से <b><font color=darkRed>[बन्ध:]</font></b> बंध <b><font color=darkRed>[नास्ति]</font></b> नहीं है ।</div><hr class=type_7>
+<div class=paragraph><b><font color=darkmagenta>अन्वयार्थ : </font></b>﻿<b><font color=darkRed>[जीव:]</font></b> जीव <b><font color=darkRed>[म्रियतां वा जीवतु वा]</font></b> मरे या जिये, <b><font color=darkRed>[अयताचारस्य]</font></b> अयत्नाचारी <span class=comment>(अप्रयत आचार वाले)</span> के <b><font color=darkRed>[हिंसा]</font></b> <span class=comment>(अंतरंग)</span> हिंसा <b><font color=darkRed>[निश्‍चिता]</font></b> निश्‍चित है; <b><font color=darkRed>[प्रयतस्य समितस्य]</font></b> प्रयत के, समितिवान् के <b><font color=darkRed>[हिंसामात्रेण]</font></b> <span class=comment>(बहिरंग)</span> हिंसामात्र से <b><font color=darkRed>[बन्ध:]</font></b> बंध <b><font color=darkRed>[नास्ति]</font></b> नहीं है ।</div>
+<div class=paragraph></div><hr class=type_7>
 <a href='#home' class=index>&#x1f3e0;</a>
-<br><div class=title id=gatha-232-233><span class=incFontSz>+ </span><a href=#index>﻿अब उसी अर्थ को दृष्टान्त और दार्ष्टान्त द्वारा दृढ़ करते हैं -</a><span class=decFontSz> -</span></div><div class=gatha>उच्चालियम्हि पाए इरियासमिदस्स णिग्गमत्थाए ।<br>आबाधेज्ज कुलिंगं मरिज्ज तं जोगमासेज्ज ॥232॥<br>ण हि तस्स तण्णिमित्तो बंधो सुहुमो य देसिदो समये  ।<br>मुच्छा परिग्गहो च्चिय अजझप्पपमाणदो दिट्ठो ॥233॥<br></div>
+<br><div class=title id=gatha-232-233><span class=incFontSz>+ </span><a href=#index>﻿अब उसी अर्थ को दृष्टान्त और दार्ष्टान्त द्वारा दृढ़ करते हैं -</a><span class=decFontSz> -</span></div><div class=gatha>उच्चालियम्हि पाए इरियासमिदस्स णिग्गमत्थाए ।<br>आबाधेज्ज कुलिंगं मरिज्ज तं जोगमासेज्ज ॥232॥<br>ण हि तस्स तण्णिमित्तो बंधो सुहुमो य देसिदो समये  ।<br>मुच्छा परिग्गहो च्चिय अज्झप्पपमाणदो दिट्ठो ॥233॥<br></div>
 <div class=gadya>हो गमन ईर्यासमिति से पर पैर के संयोग से ।<br>हों जीव बाधित या मरण हो फिर भी उनके योग से ॥२३२॥<br>ना बंध हो उस निमित्त से ऐसा कहा जिनशास्त्र में ।<br>क्योंकि मूर्च्छा परिग्रह अध्यात्म के आधार में ॥२३३॥</div>
 <div class=paragraph><b><font color=darkmagenta>अन्वयार्थ : </font></b>﻿ईर्या समिति से चलते हुये मुनिराज के, कहीं जाने के लिये उठाये हुये पैर के निमित्त से, किसी छोटे-प्राणी को बाधा पहुँचने या उसके मर जाने पर भी, उन मुनिराज के उस हिंसा के निमित्त से किंचित् मात्र भी बन्ध, आगम में नहीं कहा है । अध्यात्म-प्रमाण से मूर्च्छा को ही परिग्रह कहे गये के समान ।</div>
 <div class=paragraph></div><hr class=type_7>
