--- a/jainDataBase/poojas/05_विसर्जन/01_महाअर्घ्य/html/index.html
+++ b/jainDataBase/poojas/05_विसर्जन/01_महाअर्घ्य/html/index.html
@@ -32,7 +32,7 @@ $(document).on( "pagecontainershow", function(){
   </script>
   <script type="text/javascript" src='../../../../../js/myMobile.js'></script>
 </head>
-<body oncopy="return false" onpaste="return false" oncut="return false">
+<body>
 <div data-role=page id=demo-page>
   <div data-role=panel id=leftPanel>
     <div data-role=navbar data-maxbutton=1 class=ui-body-a>
