--- a/jainDataBase/shastra/01_द्रव्यानुयोग/02_प्रवचनसार--कुन्दकुन्दाचार्य/html/231.html
+++ b/jainDataBase/shastra/01_द्रव्यानुयोग/02_प्रवचनसार--कुन्दकुन्दाचार्य/html/231.html
@@ -44,7 +44,7 @@
         $('select option:odd').css({'color': 'blue'})
       </style>
     </head>
-    <body oncopy="return false" onpaste="return false" oncut="return false">
+    <body>
     <a href='230.html' rel=external style='float: left'><img src='../../../../../images/common/prev.jpg' height=50 width=50/></a><a href='232-233.html' rel=external style='float: right'><img src='../../../../../images/common/next.jpg' height=50 width=50/></a><div style='text-align: center'><a href='../../../../../index.html' rel=external><img src='../../../../../images/jain-saint.jpg' width=8%></img></a></div>  <div data-role='navbar'>
     <ul>
 
@@ -66,7 +66,8 @@
    <div class=gatha>﻿मरदु व जियदु व जीवो अयदाचारस्स णिच्छिदा हिंसा । <span class=comment>(217)</span><br>पयदस्स णत्थि बंधो हिंसामेत्तेण समिदस्स ॥231॥</div>
     <div class=gathaS>﻿म्रियतां वा जीवतु वा जीवोऽयताचारस्य निश्चिता हिंसा ।<br>प्रयतस्य नास्ति बन्धो हिंसामात्रेण समितस्य ॥२१७॥</div>
     <div class=gadya>﻿प्राणी मरें या ना मरें हिंसा अयत्नाचार से ।<br>तब बंध होता है नहीं जब रहें यत्नाचार से ॥२१७॥</div>
-    <div class=paragraph><b><font color=darkmagenta>अन्वयार्थ : </font></b>﻿<b><font color=darkRed>[जीव:]</font></b> जीव <b><font color=darkRed>[म्रियतां वा जीवतु वा]</font></b> मरे या जिये, <b><font color=darkRed>[अयताचारस्य]</font></b> आयत्नाचारी <span class=comment>(अप्रयत आचार वाले)</span> के <b><font color=darkRed>[हिंसा]</font></b> <span class=comment>(अंतरंग)</span> हिंसा <b><font color=darkRed>[निश्‍चिता]</font></b> निश्‍चित है; <b><font color=darkRed>[प्रयतस्य समितस्य]</font></b> प्रयत के, समितिवान् के <b><font color=darkRed>[हिंसामात्रेण]</font></b> <span class=comment>(बहिरंग)</span> हिंसामात्र से <b><font color=darkRed>[बन्ध:]</font></b> बंध <b><font color=darkRed>[नास्ति]</font></b> नहीं है ।</div>
+    <div class=paragraph><b><font color=darkmagenta>अन्वयार्थ : </font></b>﻿<b><font color=darkRed>[जीव:]</font></b> जीव <b><font color=darkRed>[म्रियतां वा जीवतु वा]</font></b> मरे या जिये, <b><font color=darkRed>[अयताचारस्य]</font></b> अयत्नाचारी <span class=comment>(अप्रयत आचार वाले)</span> के <b><font color=darkRed>[हिंसा]</font></b> <span class=comment>(अंतरंग)</span> हिंसा <b><font color=darkRed>[निश्‍चिता]</font></b> निश्‍चित है; <b><font color=darkRed>[प्रयतस्य समितस्य]</font></b> प्रयत के, समितिवान् के <b><font color=darkRed>[हिंसामात्रेण]</font></b> <span class=comment>(बहिरंग)</span> हिंसामात्र से <b><font color=darkRed>[बन्ध:]</font></b> बंध <b><font color=darkRed>[नास्ति]</font></b> नहीं है ।</div>
+<div class=paragraph></div>
     <div class=paragraphE><b><font color=darkmagenta>Meaning : </font></b>The ascetic <span class=comment>(muni, shramana)</span> whose activities are without proper diligence certainly causes injury <span class=comment>(hinsā)</span> to the living beings, whether they die or not. The ascetic who observes diligently the fivefold regulation of activities <span class=comment>(samiti)</span> does not cause bondage even if he has caused injury to the living beings.</div>
   <br><div class=teekakaar>
     <span onclick='toggleTeeka("0")' class=teeka0>&nbsp;&nbsp;अमृतचंद्राचार्य</span>&nbsp;
