--- a/jainDataBase/shastra/01_द्रव्यानुयोग/02_प्रवचनसार--कुन्दकुन्दाचार्य/html/232-233.html
+++ b/jainDataBase/shastra/01_द्रव्यानुयोग/02_प्रवचनसार--कुन्दकुन्दाचार्य/html/232-233.html
@@ -44,7 +44,7 @@
         $('select option:odd').css({'color': 'blue'})
       </style>
     </head>
-    <body oncopy="return false" onpaste="return false" oncut="return false">
+    <body>
     <a href='231.html' rel=external style='float: left'><img src='../../../../../images/common/prev.jpg' height=50 width=50/></a><a href='234.html' rel=external style='float: right'><img src='../../../../../images/common/next.jpg' height=50 width=50/></a><div style='text-align: center'><a href='../../../../../index.html' rel=external><img src='../../../../../images/jain-saint.jpg' width=8%></img></a></div>  <div data-role='navbar'>
     <ul>
 
@@ -63,7 +63,7 @@
     </div>
     <br><div class=title id=gatha-232-233><span class=incFontSz>+ </span><a href=#index>
 ﻿अब उसी अर्थ को दृष्टान्त और दार्ष्टान्त द्वारा दृढ़ करते हैं -</a><span class=decFontSz> -</span></div>
-   <div class=gatha>उच्चालियम्हि पाए इरियासमिदस्स णिग्गमत्थाए ।<br>आबाधेज्ज कुलिंगं मरिज्ज तं जोगमासेज्ज ॥232॥<br>ण हि तस्स तण्णिमित्तो बंधो सुहुमो य देसिदो समये  ।<br>मुच्छा परिग्गहो च्चिय अजझप्पपमाणदो दिट्ठो ॥233॥<br></div>
+   <div class=gatha>उच्चालियम्हि पाए इरियासमिदस्स णिग्गमत्थाए ।<br>आबाधेज्ज कुलिंगं मरिज्ज तं जोगमासेज्ज ॥232॥<br>ण हि तस्स तण्णिमित्तो बंधो सुहुमो य देसिदो समये  ।<br>मुच्छा परिग्गहो च्चिय अज्झप्पपमाणदो दिट्ठो ॥233॥<br></div>
     <div class=gadya>हो गमन ईर्यासमिति से पर पैर के संयोग से ।<br>हों जीव बाधित या मरण हो फिर भी उनके योग से ॥२३२॥<br>ना बंध हो उस निमित्त से ऐसा कहा जिनशास्त्र में ।<br>क्योंकि मूर्च्छा परिग्रह अध्यात्म के आधार में ॥२३३॥</div>
     <div class=paragraph><b><font color=darkmagenta>अन्वयार्थ : </font></b>﻿ईर्या समिति से चलते हुये मुनिराज के, कहीं जाने के लिये उठाये हुये पैर के निमित्त से, किसी छोटे-प्राणी को बाधा पहुँचने या उसके मर जाने पर भी, उन मुनिराज के उस हिंसा के निमित्त से किंचित् मात्र भी बन्ध, आगम में नहीं कहा है । अध्यात्म-प्रमाण से मूर्च्छा को ही परिग्रह कहे गये के समान ।</div>
 <div class=paragraph></div>
