--- a/jainDataBase/teeka/01_द्रव्यानुयोग/02_प्रवचनसार--कुन्दकुन्दाचार्य/html/index.html
+++ b/jainDataBase/teeka/01_द्रव्यानुयोग/02_प्रवचनसार--कुन्दकुन्दाचार्य/html/index.html
@@ -46,7 +46,7 @@
     }
   </style>
 </head>
-<body oncopy="return false" onpaste="return false" oncut="return false">
+<body>
 <div align=center><a href='../../../../../index.html'><img src='../../../../../images/jain-saint.jpg' height=270 width=300></img><figcaption>Click Here</figcaption></a></div>
 <br><br><br>
 <div class=hdr1 align=center>प्रवचनसार</div>
