sukumal charitra update till sarg4

--- a/jainDataBase/shastra/05_प्रथमानुयोग/12_सुकुमाल-चरित्र--सकलकीर्ति-भट्टारक/html/0001.html
+++ b/jainDataBase/shastra/05_प्रथमानुयोग/12_सुकुमाल-चरित्र--सकलकीर्ति-भट्टारक/html/0001.html
@@ -44,7 +44,7 @@
         $('select option:odd').css({'color': 'blue'})
       </style>
     </head>
-    <body oncopy="return false" onpaste="return false" oncut="return false">
+    <body>
     <a href='0000_शास्त्र-मंगलाचरण.html' rel=external style='float: left'><img src='../../../../../images/common/prev.jpg' height=50 width=50/></a><a href='001.html' rel=external style='float: right'><img src='../../../../../images/common/next.jpg' height=50 width=50/></a><div style='text-align: center'><a href='../../../../../index.html' rel=external><img src='../../../../../images/jain-saint.jpg' width=8%></img></a></div>  <div data-role='navbar'>
     <ul>
 
@@ -71,7 +71,8 @@
 मैं सदैव अपने हित में लगे हुए उन समस्त साधु परमेष्ठियों को उन जैसे ही धैर्य की प्राप्ति के लिये नमस्कार करता हूँ, जो महान कठोर तपस्या करते हैं, सदैव ध्यानाध्ययन में लीन रहते हुए मोक्ष लक्ष्मी की साधना में लगे रहते हैं, एवं जो पहाड़ों तथा उनकी गुफाओं या निर्जन वन में सिंह के समान निर्भय होकर रहते हैं ।<br><br>
 ये पाँचों परमेष्ठी जगत में विद्वानों द्वारा वन्दनीय और स्तवन किये जाते हैं । अत: जो कार्य मैंने प्रारम्भ किया है, उसमें मुझे अपने-अपने महान गुणों को प्रदान करें । महा कवि के गुणों से परिपूर्ण अंगबाह्य और अंगप्रविष्ट इस प्रकार दोनों श्रुतज्ञानरूपी समुद्र के पारगामी श्री गौतमादि गणधरों का मैं उनकी सी बुद्धि की प्राप्ति के लिये ध्यान करता हूँ । <br><br>
 जिनेन्द्र देवाधिदेव के मुखारविन्द में निवास करनेवाली, जगत की माता सम्पूर्ण चराचर पदार्थों को दिखलानेवाली, चारित्र के पालन कराने में प्रवीण भगवती सरस्वती की मैं स्तुति और वन्दना करता हूँ, जिसके महान प्रसाद से बुद्धि संस्कारयुक्त, निर्मल और कविता की रचना में समर्थ होती है । तीर्थंकर भगवान द्वारा कहे हुए अंग, पूर्व और प्रकीर्ण को जिन प्रत्येक बुद्धिधारी श्रुतकेवली गणधरों ने धारण कर अर्थरूप से कहे, उन सब गणधरों को मेरा नमस्कार है । महान धीर, महान रूपवान, महान वीर्य पराक्रम के धारी, महान वैश्य कुल में उत्पन्न, महान लक्ष्मी से विभूषित, महामान्य शूरवीर बड़े-बड़े उपसर्गों के विजयी, महामुनि सुकुमाल स्वामी को उनकी-सी शक्ति प्राप्त करने के लिये मैं स्तुति करता हूँ ।<br><br>
-इस प्रकार महान मंगल के चाहनेवाले मैंने संसार के मंगल करनेवाले देव, शास्त्र और गुरुओं की वन्दना तथा स्तुति की है, सो यह जो मैंने कार्य प्रारम्भ किया है, उसकी सिद्धि के लिये समस्त विघ्नों का नाश कर, पापनाशन और पुण्यलाभरूप मंगल करें ।
+इस प्रकार महान मंगल के चाहनेवाले मैंने संसार के मंगल करनेवाले देव, शास्त्र और गुरुओं की वन्दना तथा स्तुति की है, सो यह जो मैंने कार्य प्रारम्भ किया है, उसकी सिद्धि के लिये समस्त विघ्नों का नाश कर, पापनाशन और पुण्यलाभरूप मंगल करें ।<br><br>
+
        </div>
     </td></tr>
   </table><br><br><br>
